[gd_scene load_steps=7 format=2]

[ext_resource path="res://white.png" type="Texture" id=1]
[ext_resource path="res://UI/SettingsMenu.gd" type="Script" id=2]
[ext_resource path="res://UI/Assets/Fonts/KdamThmor_20.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/Assets/Fonts/KdamThmorPro-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/Assets/Fonts/KdamThmor_10.tres" type="DynamicFont" id=5]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 4 )

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.0313726, 0.12549, 0.0352941, 1 )
position = Vector2( 320, 180 )
scale = Vector2( 40, 23 )
z_index = -15
texture = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 600.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 1 )
text = "Settings"
align = 1
valign = 1

[node name="M" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 40
custom_constants/margin_top = 100
custom_constants/margin_left = 40
custom_constants/margin_bottom = 20

[node name="H" type="HBoxContainer" parent="M"]
margin_left = 40.0
margin_top = 100.0
margin_right = 600.0
margin_bottom = 340.0

[node name="ButtonsL" type="VBoxContainer" parent="M/H"]
margin_right = 278.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MobileControls" type="HBoxContainer" parent="M/H/ButtonsL"]
margin_right = 278.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="M/H/ButtonsL/MobileControls"]
margin_top = 12.0
margin_right = 75.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 5 )
text = "mobile controls:"

[node name="Button" type="CheckButton" parent="M/H/ButtonsL/MobileControls"]
margin_left = 202.0
margin_right = 278.0
margin_bottom = 40.0
size_flags_horizontal = 10
custom_fonts/font = ExtResource( 5 )

[node name="ButtonsR" type="VBoxContainer" parent="M/H"]
margin_left = 282.0
margin_right = 560.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Back" type="Button" parent="M"]
margin_left = 40.0
margin_top = 300.0
margin_right = 600.0
margin_bottom = 340.0
rect_min_size = Vector2( 240, 40 )
size_flags_vertical = 10
custom_fonts/font = ExtResource( 3 )
text = "Back"

[connection signal="toggled" from="M/H/ButtonsL/MobileControls/Button" to="." method="_on_mobile_controls_Button_toggled"]
[connection signal="pressed" from="M/Back" to="." method="_on_Back_pressed"]
